fix: z-index of elements

--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -2,16 +2,16 @@
   direction: rtl;
   @apply fixed top-0 bottom-0 right-0 left-0 z-50;
   @apply flex justify-center items-center;
-  // transition:  opacity 0.4s linear;
-  // opacity: 0;
 }
+
 .zpl-modal-box {
-  @apply w-full max-h-[88vh] absolute bottom-0 z-[100] rounded-t-md;
+  @apply w-full max-h-[88vh] absolute bottom-0 z-[51] rounded-t-md;
   @apply lg:w-[600px] lg:rounded-md lg:static;
   @apply flex flex-col;
   @apply text-text bg-surface shadow-elevation-100;
   @apply dark:text-text-dark dark:bg-surface-dark dark:shadow-dark-elevation-100;
 }
+
 .zpl-modal-header {
   @apply p-md flex items-center justify-between;
   h1 {
@@ -21,6 +21,7 @@
     @apply w-2xl h-2xl;
   }
 }
+
 .zpl-modal-body {
   @apply overflow-y-auto min-h-[100px];
   /* ---------------------------------- */
@@ -40,15 +41,18 @@
     @apply dark:bg-surface-dark-heavy;
   }
 }
+
 .zpl-modal-footer {
   @apply p-md flex items-center justify-between;
 }
+
 .zpl-modal-footer-container {
   @apply flex items-center gap-xs;
   &.left {
     @apply mr-auto;
   }
 }
+
 .backdrop {
   @apply fixed top-0 bottom-0 right-0 left-0 z-50;
   @apply bg-alpha-overlay;
@@ -60,6 +64,7 @@
 .fade-leave-active {
   transition: opacity 0.2s;
 }
+
 .fade-enter,
 .fade-leave-to {
   opacity: 0;
